tests/voliva/fail/regress/case_folding.err
file://$WSA/dist/assets/io-C1Dry2Fz.js:771
    throw new Error(`invalid opcode ${opcode}`);
          ^

Error: invalid opcode valuei̇nteger
    at parseArgs (file://$WSA/dist/assets/io-C1Dry2Fz.js:771:11)
    at file://$WSA/dist/assets/io-C1Dry2Fz.js:914:45
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)

Node.js v23.4.0
